change in postioning of new fields

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,16 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:layout_width="270dp"
+        android:layout_height="45dp"
+        android:text="Type in a number and hit submit to get the square of the number"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.247" />
+        app:layout_constraintVertical_bias="0.198" />
 
     <EditText
         android:id="@+id/numberEditField"
@@ -29,7 +30,7 @@
         android:layout_marginRight="85dp"
         android:layout_marginBottom="18dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="number|textPersonName"
         android:text="Input Number"
         app:layout_constraintBottom_toTopOf="@+id/squareButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,6 +47,7 @@
         android:layout_marginEnd="159dp"
         android:layout_marginRight="159dp"
         android:layout_marginBottom="306dp"
+        android:onClick="@string"
         android:text="Submit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
